--- a/Basic Programs/JavaScript/basic.html
+++ b/Basic Programs/JavaScript/basic.html
@@ -1,3 +1,9 @@
+<!--
+    Author: Felipe Castro
+    File: basic.html
+    Information: Simple HTML file to import our Javascript file
+-->
+
 <!DOCTYPE html>
 
 <html lang="en">
