Finished Learning Ajax, JQuery and Bootstrap/ Improved Comments

--- a/Basic Programs/HTML/BasicHTML/basic.html
+++ b/Basic Programs/HTML/BasicHTML/basic.html
@@ -1,22 +1,31 @@
+<!--
+    Author: Felipe Castro
+    File: basic.html
+    Information: Simple HTML file 
+-->
+
+
 <!DOCTYPE html>
 
 <html lang="en">
-    <!-- This is the head of my HTML File -->
-    <head>
+<!-- This is the head of my HTML File -->
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie-edge" />
     <title> Basic HTML File - My Title</title>
-    </head>
+</head>
 
 
-    <!-- This is the body of my HTML File -->
-    <body>
-        <h1>Basic HTML File - My Body </h1>
-        <p>Here we can enter the text for the body of my HTML file</p>
-    </body>
+<!-- This is the body of my HTML File -->
+
+<body>
+    <h1>Basic HTML File - My Body </h1>
+    <p>Here we can enter the text for the body of my HTML file</p>
+</body>
 
 
-    <script src='script.js'></script>
+<script src='script.js'></script>
 
 </html>
