Implemented\Improved Comments in Multiple files

--- a/Basic Programs/HTML/AdvancedHTML/basicBootstrap.html
+++ b/Basic Programs/HTML/AdvancedHTML/basicBootstrap.html
@@ -2,6 +2,7 @@
     Author: Felipe Castro
     File: basicBootstrap.html
     Information: Simple Basic Bootstrap File
+    How to run it: Just open this file on a web browser
 -->
 
 <!doctype html>
