--- a/Basic Programs/HTML/BasicHTML/basic.html
+++ b/Basic Programs/HTML/BasicHTML/basic.html
@@ -2,6 +2,7 @@
     Author: Felipe Castro
     File: basic.html
     Information: Simple HTML file 
+    How to run it: Just open this file on a web browser
 -->
 
 
