--- a/Basic Programs/HTML/BasicHTML/basic2.html
+++ b/Basic Programs/HTML/BasicHTML/basic2.html
@@ -2,6 +2,7 @@
     Author: Felipe Castro
     File: basic2.html
     Information: HTML File with Multiple Inputs and Resources
+    How to run it: Just open this file on a web browser
 -->
 
 <!DOCTYPE html>
