--- a/Basic Programs/JavaScript/InteractingWithHTML/2/index.html
+++ b/Basic Programs/JavaScript/InteractingWithHTML/2/index.html
@@ -3,6 +3,11 @@
     File: index.html
     Information: HTML File with multiple Inputs and Resources to Practice JQuery and Ajax
 -->
+<!--
+    Author: Felipe Castro
+    File: index.html
+    Information: Simple HTML file to import our Javascript file and Do Multiple Things
+-->
 
 <!DOCTYPE html>
 <html>
